--- a/axe5000_top.qsf
+++ b/axe5000_top.qsf
@@ -1,41 +1,21 @@
-set_location_assignment PIN_A14 -to DIP_SW[0]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 9MA -to RLED -entity axe5000_top
-set_instance_assignment -name CURRENT_STRENGTH_NEW 9MA -to GLED -entity axe5000_top
-set_instance_assignment -name CURRENT_STRENGTH_NEW 9MA -to BLED -entity axe5000_top
-set_location_assignment PIN_AG23 -to UART_RXD
-set_location_assignment PIN_AG24 -to UART_TXD
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to UART_RXD -entity axe5000_top
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to UART_TXD -entity axe5000_top
-# -------------------------------------------------------------------------- #
-#
-# Copyright (C) 2025  Intel Corporation. All rights reserved.
-# Your use of Intel Corporation's design tools, logic functions 
-# and other software and tools, and any partner logic 
-# functions, and any output files from any of the foregoing 
-# (including device programming or simulation files), and any 
-# associated documentation or information are expressly subject 
-# to the terms and conditions of the Intel Program License 
-# Subscription Agreement, the Intel Quartus Prime License Agreement,
-# the Intel FPGA IP License Agreement, or other applicable license
-# agreement, including, without limitation, that your use is for
-# the sole purpose of programming logic devices manufactured by
-# Intel and sold by Intel or its authorized distributors.  Please
-# refer to the Intel FPGA Software License Subscription Agreements 
-# on the Quartus Prime software download page.
-#
-# -------------------------------------------------------------------------- #
-#
-# Quartus Prime
-# Version 24.3.1 Build 102 01/14/2025 SC Pro Edition
-# Date created = 09:11:57  January 28, 2025
-#
-# -------------------------------------------------------------------------- #
+# --------------------------------------------------------------------------
+# AXE5000 / Agilex 5 — Clean QSF (ADC on B0, clock on A7, UART 3v3)
+# Device: A5EC008BM16AE6S
+# Top   : axe5000_top
+# --------------------------------------------------------------------------
+
+# -------- Project / Device --------
+set_global_assignment -name FAMILY "Agilex 5"
+set_global_assignment -name DEVICE A5EC008BM16AE6S
+set_global_assignment -name TOP_LEVEL_ENTITY axe5000_top
+set_global_assignment -name LAST_QUARTUS_VERSION "25.1.1 Pro Edition"
+
+# -------- Build / Config --------
+set_global_assignment -name GENERATE_COMPRESSED_SOF ON
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
+set_global_assignment -name BOARD default
 set_global_assignment -name PWRMGT_VOLTAGE_OUTPUT_FORMAT "LINEAR FORMAT"
 set_global_assignment -name PWRMGT_LINEAR_FORMAT_N "-12"
-set_global_assignment -name LAST_QUARTUS_VERSION "25.1.1 Pro Edition"
-set_global_assignment -name FAMILY "Agilex 5"
-set_global_assignment -name TOP_LEVEL_ENTITY axe5000_top
-set_global_assignment -name DEVICE A5EC008BM16AE6S
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 100
 set_global_assignment -name AUTO_RESTART_CONFIGURATION OFF
@@ -44,6 +24,10 @@ set_global_assignment -name USE_CONF_DONE SDM_IO16
 set_global_assignment -name USE_INIT_DONE SDM_IO0
 set_global_assignment -name ACTIVE_SERIAL_CLOCK AS_FREQ_25MHZ
 set_global_assignment -name DEVICE_INITIALIZATION_CLOCK OSC_CLK_1_25MHZ
+set_global_assignment -name POWER_APPLY_THERMAL_MARGIN ADDITIONAL
+
+# -------- Sources / IP --------
+set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_FILE sources/clk_rst_pkg.vhd
 set_global_assignment -name VHDL_FILE sources/about_pkg.vhd
 set_global_assignment -name VHDL_FILE sources/about.vhd
@@ -56,12 +40,12 @@ set_global_assignment -name VHDL_FILE sources/fir_equalizer.vhd
 set_global_assignment -name VHDL_FILE sources/dac_1_bit.vhd
 set_global_assignment -name VHDL_FILE sources/cic_sinc3_decimator.vhd
 set_global_assignment -name VHDL_FILE sources/axe5000_top.vhd
-set_global_assignment -name TCL_SCRIPT_FILE sources/axe5000_pin_assignment.tcl
+
 set_global_assignment -name SDC_FILE sources/axe5000_top.sdc
+
 set_global_assignment -name IP_FILE ip/niosv_system/reset_release.ip
 set_global_assignment -name IP_FILE ip/niosv_system/onchip_memory.ip
 set_global_assignment -name IP_FILE ip/niosv_system/jtag_master.ip
-set_global_assignment -name IP_FILE ip/niosv_system/pwm8x3.ip
 set_global_assignment -name IP_FILE ip/niosv_system/sys_id.ip
 set_global_assignment -name IP_FILE ip/niosv_system/dip_sw.ip
 set_global_assignment -name IP_FILE ip/niosv_system/pb.ip
@@ -73,41 +57,47 @@ set_global_assignment -name IP_FILE ip/niosv_system/niosv_m_0.ip
 set_global_assignment -name IP_FILE ip/niosv_system/reset_bridge.ip
 set_global_assignment -name IP_FILE ip/niosv_system/niosv_system_clock_in.ip
 set_global_assignment -name IP_FILE ip/niosv_system/interval_2s_timer.ip
-set_global_assignment -name QSYS_FILE niosv_system.qsys
-set_global_assignment -name GENERATE_COMPRESSED_SOF ON
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name BOARD default
 set_global_assignment -name IP_FILE ip/niosv_system/lw_uart.ip
+set_global_assignment -name IP_FILE ip/niosv_system/niosv_system_mm_ccb_0.ip
+set_global_assignment -name QSYS_FILE niosv_system.qsys
+
+# If another script assigns pins, it may reintroduce conflicts — leave disabled.
+# set_global_assignment -name TCL_SCRIPT_FILE sources/axe5000_pin_assignment.tcl
+
+# -------- Pin / IO Standards --------
+
+# 25 MHz user clock (A7, 1.2-V bank)
 set_location_assignment PIN_A7 -to CLK_25M_C
 set_instance_assignment -name IO_STANDARD "1.2-V" -to CLK_25M_C -entity axe5000_top
+
+# DIP switches (1.2-V bank, with weak pull-ups)
+set_location_assignment PIN_A14 -to DIP_SW[0]
 set_instance_assignment -name IO_STANDARD "1.2-V" -to DIP_SW[0] -entity axe5000_top
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to DIP_SW[0] -entity axe5000_top
+
 set_location_assignment PIN_A13 -to DIP_SW[1]
 set_instance_assignment -name IO_STANDARD "1.2-V" -to DIP_SW[1] -entity axe5000_top
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to DIP_SW[1] -entity axe5000_top
-set_location_assignment PIN_A12 -to USER_BTN
-set_instance_assignment -name IO_STANDARD "1.2-V" -to USER_BTN -entity axe5000_top
-set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to USER_BTN -entity axe5000_top
-set_location_assignment PIN_AJ24 -to VSEL_1V3
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VSEL_1V3 -entity axe5000_top
-set_location_assignment PIN_AG21 -to LED1
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to LED1 -entity axe5000_top
-set_location_assignment PIN_AH22 -to RLED
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to RLED -entity axe5000_top
-set_location_assignment PIN_AK21 -to GLED
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to GLED -entity axe5000_top
-set_location_assignment PIN_AK20 -to BLED
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to BLED -entity axe5000_top
-set_location_assignment PIN_AK24 -to INT1
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to INT1 -entity axe5000_top
-set_location_assignment PIN_AJ25 -to INT2
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to INT2 -entity axe5000_top
-set_location_assignment PIN_AH25 -to I2C_SCL
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to I2C_SCL -entity axe5000_top
-set_location_assignment PIN_AK26 -to I2C_SDA
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to I2C_SDA -entity axe5000_top
-set_global_assignment -name POWER_APPLY_THERMAL_MARGIN ADDITIONAL
-set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (VHDL)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
-set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
-set_global_assignment -name IP_FILE ip/niosv_system/niosv_system_mm_ccb_0.ip
+
+# UART (3.3-V bank). Match top-level names exactly.
+# If your board swaps these, flip the two set_location lines only.
+set_location_assignment PIN_AG24 -to UART_RX
+set_location_assignment PIN_AG23 -to UART_TX
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to UART_RX -entity axe5000_top
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to UART_TX -entity axe5000_top
+
+# DAC feedback output on HSIO single-ended (N6) — follow VADJ rail
+set_location_assignment PIN_N6 -to DAC_OUT
+set_instance_assignment -name IO_STANDARD "1.2-V" -to DAC_OUT -entity axe5000_top
+# If VADJ is 1.3 V in hardware, change to:
+# set_instance_assignment -name IO_STANDARD "1.3-V" -to DAC_OUT -entity axe5000_top
+set_instance_assignment -name SLEW_RATE 0 -to DAC_OUT -entity axe5000_top
+set_location_assignment PIN_U4 -to TEST_PIN -comment IOBANK_2A_T
+set_instance_assignment -name IO_STANDARD "1.2-V" -to TEST_PIN -entity axe5000_top
+set_instance_assignment -name SLEW_RATE 0 -to TEST_PIN -entity axe5000_top
+set_location_assignment PIN_A12 -to CPU_RESETn -comment IOBANK_3A_B
+set_instance_assignment -name IO_STANDARD "1.2-V" -to CPU_RESETn -entity axe5000_top
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to CPU_RESETn -entity axe5000_top
+set_location_assignment PIN_V6 -to ANALOG_IN -comment IOBANK_2A_T
+set_instance_assignment -name IO_STANDARD "1.2-V TRUE DIFFERENTIAL SIGNALING" -to ANALOG_IN -entity axe5000_top
+set_location_assignment PIN_W5 -to "ANALOG_IN(n)" -comment IOBANK_2A_T
