--- a/.gitignore
+++ b/.gitignore
@@ -68,48 +68,48 @@ board.info
 *.qgsynthc
 
 # Generated IP component directories and files
-/niosv_system/altera_*/
-/niosv_system/software/
-/niosv_system/synth/
-/niosv_system/*_bb.v
-/niosv_system/*_inst.v
-/niosv_system/*_inst.vhd
-/niosv_system/*.sopcinfo
-/niosv_system/*.html
-/niosv_system/*.qip
+/adc_system/altera_*/
+/adc_system/software/
+/adc_system/synth/
+/adc_system/*_bb.v
+/adc_system/*_inst.v
+/adc_system/*_inst.vhd
+/adc_system/*.sopcinfo
+/adc_system/*.html
+/adc_system/*.qip
 
 # IP component management - keep only source files
 # Ignore all IP component directories, then whitelist source files
-/ip/niosv_system/*/
-!/ip/niosv_system/*.ip
+/ip/adc_system/*/
+!/ip/adc_system/*.ip
 
 # Custom PWM component - keep source VHDL and TCL, ignore generated
 /ip/custom_pwm/custom_pwm_generation.rpt
 /ip/custom_pwm/serv_req_info.txt
 # Generated files in IP component root directories  
-/ip/niosv_system/*/*.cmp
-/ip/niosv_system/*/*.html
-/ip/niosv_system/*/*.qgsynthc
-/ip/niosv_system/*/*.qip
-/ip/niosv_system/*/*.regmap
-/ip/niosv_system/*/*.sopcinfo
-/ip/niosv_system/*/*.xml
-/ip/niosv_system/*/*_bb.v
-/ip/niosv_system/*/*_inst.v
-/ip/niosv_system/*/*_inst.vhd
-/ip/niosv_system/*/*_generation.rpt
-# Generated files directly in niosv_system directory
-/niosv_system/*.cmp
-/niosv_system/*.html
-/niosv_system/*.qgsynthc
-/niosv_system/*.qip
-/niosv_system/*.regmap
-/niosv_system/*.sopcinfo
-/niosv_system/*.xml
-/niosv_system/*_bb.v
-/niosv_system/*_inst.v
-/niosv_system/*_inst.vhd
-/niosv_system/*_generation.rpt
+/ip/adc_system/*/*.cmp
+/ip/adc_system/*/*.html
+/ip/adc_system/*/*.qgsynthc
+/ip/adc_system/*/*.qip
+/ip/adc_system/*/*.regmap
+/ip/adc_system/*/*.sopcinfo
+/ip/adc_system/*/*.xml
+/ip/adc_system/*/*_bb.v
+/ip/adc_system/*/*_inst.v
+/ip/adc_system/*/*_inst.vhd
+/ip/adc_system/*/*_generation.rpt
+# Generated files directly in adc_system directory
+/adc_system/*.cmp
+/adc_system/*.html
+/adc_system/*.qgsynthc
+/adc_system/*.qip
+/adc_system/*.regmap
+/adc_system/*.sopcinfo
+/adc_system/*.xml
+/adc_system/*_bb.v
+/adc_system/*_inst.v
+/adc_system/*_inst.vhd
+/adc_system/*_generation.rpt
 # Custom PWM generated files
 /ip/custom_pwm/*_generation.rpt
 /ip/custom_pwm/serv_req_info.txt
@@ -283,5 +283,5 @@ Thumbs.db
 *_inst.v
 *_inst.vhd
 *_bb.v
-/niosv_system/niosv_system_inst.vhd
-/niosv_system/niosv_system_bb.v
+/adc_system/adc_system_inst.vhd
+/adc_system/adc_system_bb.v
