--- a/axe5000_top.qsf
+++ b/axe5000_top.qsf
@@ -31,6 +31,7 @@ set_global_assignment -name POWER_APPLY_THERMAL_MARGIN ADDITIONAL
 # -------- Sources / IP --------
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_FILE sources/clk_rst_pkg.vhd
+set_global_assignment -name VHDL_FILE sources/dsp_utils_pkg.vhd
 set_global_assignment -name VHDL_FILE sources/tdc_quantizer.vhd
 set_global_assignment -name VHDL_FILE sources/rc_adc_top.vhd
 set_global_assignment -name VHDL_FILE sources/fir_lowpass.vhd
@@ -58,7 +59,7 @@ set_global_assignment -name QSYS_FILE adc_system.qsys
 
 # 25 MHz user clock (A7, 1.2-V bank)
 set_location_assignment PIN_A7 -to CLK_25M_C
-set_instance_assignment -name IO_STANDARD "1.3-V" -to CLK_25M_C -entity axe5000_top
+set_instance_assignment -name IO_STANDARD "1.2-V" -to CLK_25M_C -entity axe5000_top
 
 # DIP switches (1.2-V bank, with weak pull-ups)
 
@@ -70,12 +71,12 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to UART_TX -entity axe
 
 # DAC feedback output on HSIO single-ended (N6) — follow VADJ rail
 set_location_assignment PIN_N6 -to DAC_OUT
-set_instance_assignment -name IO_STANDARD "1.3-V" -to DAC_OUT -entity axe5000_top
+set_instance_assignment -name IO_STANDARD "1.3-V LVCMOS" -to DAC_OUT -entity axe5000_top
 # If VADJ is 1.3 V in hardware, change to:
 # set_instance_assignment -name IO_STANDARD "1.3-V" -to DAC_OUT -entity axe5000_top
 set_instance_assignment -name SLEW_RATE 0 -to DAC_OUT -entity axe5000_top
 set_location_assignment PIN_U4 -to TEST_PIN
-set_instance_assignment -name IO_STANDARD "1.3-V" -to TEST_PIN -entity axe5000_top
+set_instance_assignment -name IO_STANDARD "1.3-V LVCMOS" -to TEST_PIN -entity axe5000_top
 set_instance_assignment -name SLEW_RATE 0 -to TEST_PIN -entity axe5000_top
 set_location_assignment PIN_V6 -to ANALOG_IN
 set_instance_assignment -name IO_STANDARD "1.3-V TRUE DIFFERENTIAL SIGNALING" -to ANALOG_IN -entity axe5000_top
