--- a/axe5000_top.qsf
+++ b/axe5000_top.qsf
@@ -30,6 +30,7 @@ set_global_assignment -name POWER_APPLY_THERMAL_MARGIN ADDITIONAL
 
 # -------- Sources / IP --------
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
+set_global_assignment -name VHDL_FILE sources/common_pkg.vhd
 set_global_assignment -name VHDL_FILE sources/clk_rst_pkg.vhd
 set_global_assignment -name VHDL_FILE sources/dsp_utils_pkg.vhd
 set_global_assignment -name VHDL_FILE sources/tdc_quantizer.vhd
@@ -37,6 +38,7 @@ set_global_assignment -name VHDL_FILE sources/rc_adc_top.vhd
 set_global_assignment -name VHDL_FILE sources/fir_lowpass.vhd
 set_global_assignment -name VHDL_FILE sources/fir_equalizer.vhd
 set_global_assignment -name VHDL_FILE sources/cic_sinc3_decimator.vhd
+set_global_assignment -name VHDL_FILE sources/uart_sample_streamer.vhd
 set_global_assignment -name VHDL_FILE sources/axe5000_top.vhd
 
 set_global_assignment -name SDC_FILE sources/axe5000_top.sdc
