--- a/axe5000_top.qsf
+++ b/axe5000_top.qsf
@@ -59,6 +59,7 @@ set_global_assignment -name VHDL_FILE sources/fir_lowpass.vhd
 set_global_assignment -name VHDL_FILE sources/fir_equalizer.vhd
 set_global_assignment -name VHDL_FILE sources/cic_sinc3_decimator.vhd
 set_global_assignment -name VHDL_FILE sources/uart_sample_streamer.vhd
+set_global_assignment -name VHDL_FILE sources/adc_capture.vhd
 set_global_assignment -name VHDL_FILE sources/axe5000_top.vhd
 set_global_assignment -name IP_FILE ip/adc_system/sysclk_bridge.ip
 set_global_assignment -name IP_FILE ip/adc_system/adc_system_clock_in.ip
@@ -98,3 +99,5 @@ set_global_assignment -name IP_FILE ip/adc_system/iopll_tdc.ip
 set_global_assignment -name EDA_BOARD_DESIGN_SIGNAL_INTEGRITY_TOOL "HSPICE (Signal Integrity)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT HSPICE -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR "<output_directory>" -section_id eda_board_design_signal_integrity
+set_location_assignment PIN_AG23 -to UART_RX -comment IOBANK_5A
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to UART_RX -entity axe5000_top
