--- a/axe5000_top.qsf
+++ b/axe5000_top.qsf
@@ -59,6 +59,7 @@ set_global_assignment -name VHDL_FILE sources/fir_lowpass.vhd
 set_global_assignment -name VHDL_FILE sources/fir_equalizer.vhd
 set_global_assignment -name VHDL_FILE sources/cic_sinc3_decimator.vhd
 set_global_assignment -name VHDL_FILE sources/uart_sample_streamer.vhd
+set_global_assignment -name VHDL_FILE sources/tdc_monitor_uart_streamer.vhd
 set_global_assignment -name VHDL_FILE sources/adc_capture.vhd
 set_global_assignment -name VHDL_FILE sources/axe5000_top.vhd
 set_global_assignment -name IP_FILE ip/adc_system/sysclk_bridge.ip
